<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Insta$waggify</string>

    <!-- Strings for the menu -->
    <string name="action_settings">Settings</string>
    <string name="action_add_filter">Add Filter</string>
    <string name="action_add_favorite">Save Preset</string>
    <string name="action_select_favorite">Load Preset</string>
    <string name="action_take_photo">Take Photo</string>
    <string name="action_select_photo">Select Photo</string>
    <string name="action_undo">Undo</string>
    <string name="action_save_picture">Save Photo</string>
    <string name="action_clear">Clear</string>
    <string name="action_share">Share</string>
    <string name="filter_dialog_title">Select Filter</string>

    <!-- Strings for the preset function -->
    <string name="preset_hint">Preset name</string>
    <string name="preset_select">Select preset</string>
    <string name="preset_empty">No presets found</string>
    <string name="preset_dialog_title">Save Preset</string>
    <string name="export_dialog_title">Export Photo</string>
    <string name="export_dialog_title">Save Photo</string>
    <string name="export_dialog_text">Select quality</string>
    <string name="share_dialog_title">Share Photo</string>
    <string name="filter_dialog_title">Select Filter</string>


    <!-- Strings for exporting and sharing picture -->
    <string name="share_dialog_title">Share Photo</string>
    <string name="export_dialog_text">Select quality</string>
    <string name="compression_prompt">Choose a compression</string>
    <string-array name="compression">
        <item>JPEG</item>
        <item>PNG</item>
    </string-array>

    <string name="accept">Accept</string>
    <string name="cancel">Cancel</string>

</resources>
