<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity" >

    <item android:id="@+id/action_take_photo"
        android:title="@string/action_take_photo"
        android:icon="@drawable/ic_action_camera"
        android:orderInCategory="90"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_select_photo"
        android:title="@string/action_select_photo"
        android:icon="@drawable/ic_action_picture"
        android:orderInCategory="91"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_add"
        android:title="@string/action_add_filter"
        android:icon="@drawable/ic_action_new"
        android:orderInCategory="92"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_share"
        android:title="@string/action_share"
        android:icon="@drawable/ic_action_share"
        android:orderInCategory="93"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:icon="@drawable/ic_action_undo"
        android:orderInCategory="94"
        android:enabled="false"
        android:showAsAction="ifRoom" />

    <item android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:icon="@drawable/ic_action_discard"
        android:orderInCategory="95"
        android:showAsAction="never" />

    <item android:id="@+id/action_favorites"
          android:title="@string/action_select_favorite"
          android:icon="@drawable/ic_action_important"
          android:orderInCategory="96"
          android:showAsAction="ifRoom" />

    <item android:id="@+id/action_add_favorite"
          android:title="@string/action_add_favorite"
          android:icon="@drawable/ic_action_important"
          android:orderInCategory="97"
          android:showAsAction="never" />

    <item android:id="@+id/action_save_picture"
        android:title="@string/action_save_picture"
        android:icon="@drawable/ic_action_save"
        android:orderInCategory="98"
        android:showAsAction="ifRoom" />

/>

</menu>
